--- a/src/dial/view/Interface.fxml
+++ b/src/dial/view/Interface.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="340.0" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="120.0" layoutY="371.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="登录" />
       <CheckBox layoutX="45.0" layoutY="313.0" mnemonicParsing="false" text="电信" />
@@ -14,6 +17,6 @@
       <TextField layoutX="111.0" layoutY="128.0" />
       <TextField layoutX="111.0" layoutY="207.0" />
       <Label layoutX="42.0" layoutY="277.0" text="选择运营商" />
-      <Label layoutX="141.0" layoutY="58.0" text="HZNU-Dial" />
+      <Label layoutX="72.0" layoutY="39.0" styleClass="label-header" stylesheets="@Theme.css" text="HZNU-Dial" />
    </children>
 </Pane>
