--- a/src/dial/view/Interface.fxml
+++ b/src/dial/view/Interface.fxml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="486.0" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dial.view.InterfaceController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="510.0" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dial.view.InterfaceController">
    <children>
 
       <ImageView fx:id="ZeroTwo" fitHeight="340.0" fitWidth="531.0" pickOnBounds="true" preserveRatio="true">
-         <Image url="@../../../resources/images/ZeroTwo.png" />
+            <Image url="@../../../resources/images/ZeroTwo.png" />
       </ImageView>
 
       <Button fx:id="Login" layoutX="361.0" layoutY="295.0" mnemonicParsing="false" onAction="#handleDial" prefHeight="25.0" prefWidth="100.0" text="登录" />
