--- a/src/dial/view/Interface.fxml
+++ b/src/dial/view/Interface.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="510.0" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dial.view.InterfaceController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="510.0" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dial.view.InterfaceController">
    <children>
 
       <ImageView fx:id="ZeroTwo" fitHeight="340.0" fitWidth="510.0" pickOnBounds="true" preserveRatio="true"> </ImageView>
@@ -19,5 +19,9 @@
       <RadioButton fx:id="CTC" layoutX="41.0" layoutY="301.0" mnemonicParsing="false" text="电信" />
       <RadioButton fx:id="CMC" layoutX="146.0" layoutY="301.0" mnemonicParsing="false" text="移动" />
       <RadioButton fx:id="CUC" layoutX="258.0" layoutY="301.0" mnemonicParsing="false" text="联通" />
+
+      <!-- use label to control pane -->
+      <Label fx:id="HeaderLabel" contentDisplay="RIGHT" layoutY="-6.0" prefHeight="33.0" prefWidth="510.0" stylesheets="@Theme.css" />
+      <ImageView fx:id="Win_close" fitHeight="21.0" fitWidth="20.0" layoutX="486.0" layoutY="4.0" onMouseClicked="#Win_close_handler" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
