--- a/src/dial/view/Theme.css
+++ b/src/dial/view/Theme.css
@@ -2,6 +2,14 @@
     -fx-background-color: #000;
 }
 
+#HeaderLabel{
+    -fx-background-color: #808080;
+}
+
+/*#Win_close:hover{*/
+/*    -fx-background-image: url("//resources//images//ZeroTwo.png");*/
+/*}*/
+
 .label {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
