--- a/src/dial/view/Interface.fxml
+++ b/src/dial/view/Interface.fxml
@@ -21,7 +21,7 @@
       <RadioButton fx:id="CUC" layoutX="258.0" layoutY="301.0" mnemonicParsing="false" text="联通" />
 
       <!-- use label to control pane -->
-      <Label fx:id="HeaderLabel" contentDisplay="RIGHT" layoutY="-6.0" prefHeight="33.0" prefWidth="510.0" stylesheets="@Theme.css" />
+      <Label fx:id="HeaderLabel" contentDisplay="RIGHT" layoutY="-6.0" onMouseDragged="#Win_Drag_handler" onMousePressed="#Win_Drag_handler" prefHeight="33.0" prefWidth="510.0" stylesheets="@Theme.css" />
       <ImageView fx:id="Win_close" fitHeight="21.0" fitWidth="20.0" layoutX="486.0" layoutY="4.0" onMouseClicked="#Win_close_handler" onMouseExited="#Win_close_out_handler" onMouseMoved="#Win_close_hover_handler" onMousePressed="#Win_close_press_handler" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
